[package]
name = "feynsum-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
qasmsim = "1.3.0"
structopt = "0.3"
bit-vec = "0.6"
num = "0.4.1"
approx = "0.5.1"
