[package]
name = "feynsum-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qasmsim = { git = "https://github.com/byeongjee/qasmsim.git", tag = "scientific-notation" }
log = "0.4.20"
env_logger = "0.10.0"
structopt = "0.3"
bit-vec = "0.6"
num = "0.4.1"
approx = "0.5.1"
rayon = "1.7.0"
atomic_float = "0.1.0"
bytemuck = "1.14.0"
tikv-jemallocator = "0.5.4"
derivative = "2.2.0"
crossbeam = "0.8.2"
arc-swap = "1.6.0"
atomic = "0.6.0"

[build-dependencies]
futhark-bindgen = { version = "0.2.5", default-features = false, features = [
    "build",
] }
